# agent-supabase-resend-py

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  Makefile  README.md  SKILL.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  index.py  webhook.py
tests/: __init__.py  conftest.py  test_webhook.py
