[project]
name = "agent-supabase-resend"
version = "0.1.0"
description = "Supabase → Resend email webhook agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "resend>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.poetry]
name = "agent-supabase-resend"
version = "0.1.0"
description = "Supabase → Resend email webhook agent"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
resend = ">=2.0.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
uv = "*"
