[project]
name = "agent-supabase-resend"
version = "0.1.0"
description = "Supabase → Resend email webhook agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "resend>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.coverage.run]
source = ["api"]
omit = ["*/tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]
show_missing = true
fail_under = 0

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", ".vercel", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N801"]

[tool.ruff.format]
quote-style = "double"
